YTG [샘플][빌드] 네트워크 통신 진행
- Retrofit 통신이 현재 제대로 되고 있지 않음 ㅠㅠ

--- a/features/home/src/main/AndroidManifest.xml
+++ b/features/home/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.az.home">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_home">
