--- a/infinite_recyclerview/src/main/AndroidManifest.xml
+++ b/infinite_recyclerview/src/main/AndroidManifest.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.az.infinite_recyclerview">
-
-    <application>
-        <activity android:name=".example.InfiniteRecyclerExampleFragment"></activity>
-        <activity android:name=".MainActivity" />
-    </application>
+<manifest package="com.az.infinite_recyclerview">
 
 </manifest>
